--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>This is CY's Capital</h1>
-    <h1>it me Siphesihle </h1>
+    <h1>it me Siphesihle, Im still learning with GIT </h1>
 </body>
 </html>
