added company norman

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is CY's Capital</h1>
     <h4>This is Norman's Leader</h4>
+    <h6>The company is Norman production</h6>
 </body>
 </html>
